# models/estatetype.go
@@ -6,9 +6,16 @@ import (
 	"gopkg.in/mgo.v2/bson"
 )
 
+// swagger:model
 type EstateType struct {
-	Id        bson.ObjectId `json:"id" bson:"_id"`
-	Name      string        `json:"name" bson:"name"`
-	CreatedAt time.Time     `json:"created_at" bson:"created_at"`
-	UpdatedAt time.Time     `json:"updated_at" bson:"updated_at"`
+	// required: false
+	Id bson.ObjectId `json:"id" bson:"_id"`
+	// The name for a EstateType
+	// example: خرید
+	// required: true
+	Name string `json:"name" bson:"name"`
+	// required: false
+	CreatedAt time.Time `json:"created_at" bson:"created_at"`
+	// required: false
+	UpdatedAt time.Time `json:"updated_at" bson:"updated_at"`
 }
